[fix]#8144 fix gap comment select workspace

--- a/css/modules.less
+++ b/css/modules.less
@@ -1756,6 +1756,7 @@ textarea:focus{
 	.element{
 		width: 117px;
 		height: 117px;
+		overflow: hidden!important;
 		transition: background .25s ease;
 		&.selected{
 			background-color: @primary-light;
